--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "spress-add-ons/about-me-theme",
+    "name": "socketwench/about",
     "type": "spress-theme",
     "description": "About Me theme for creating your business card",
     "keywords": ["html5", "css3", "responsive", "template", "spress"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Victor Puertas",
-            "email": "vpgugr@gmail.com",
-            "homepage": "http://yosymfony.com"
+            "name": "Tess Flynn",
+            "email": "tess@deninet.com",
+            "homepage": "http://deninet.com"
         }
     ],
     "require": {
